--- a/app/views/CRUD/layout.html
+++ b/app/views/CRUD/layout.html
@@ -8,10 +8,10 @@
         <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/crud.custom.css'}" />
         <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/smoothness/jquery-ui-1.8.16.custom.css'}" />
         <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/ui.multiselect.css'}" />
-        <script src="@{'/public/javascripts/jquery-1.6.2.min.js'}"></script>
+        <script src="@{'/public/javascripts/jquery-1.5.2.min.js'}"></script>
         <script src="@{'/public/javascripts/jquery-ui-1.8.16.custom.min.js'}"></script>
         <script src="@{'/public/javascripts/ui.multiselect.js'}"></script>
-        <script src="@{'/public/javascripts/jquery.infieldlabel.min.js'}"></script>
+        <script src="@{'/public/javascripts/jquery.watermark.min.js'}"></script>
 <script>
 (function($){
 $(function(){
