--- a/app/views/CRUD/layout.html
+++ b/app/views/CRUD/layout.html
@@ -12,6 +12,11 @@
         <script src="@{'/public/javascripts/jquery-ui-1.8.16.custom.min.js'}"></script>
         <script src="@{'/public/javascripts/ui.multiselect.js'}"></script>
         <script src="@{'/public/javascripts/jquery.watermark.min.js'}"></script>
+<style type="text/css">
+.watermark {
+   color: #999;
+}
+</style>
 <script>
 (function($){
 $(function(){
