add logic of backlog update

--- a/conf/templates/backlog.xml
+++ b/conf/templates/backlog.xml
@@ -23,6 +23,12 @@
               <int>${offset}</int>
             </value>
           </member>
+          <member>
+            <name>sort</name>
+            <value>
+              <string>CREATED</string>
+            </value>
+          </member>
         </struct>
       </value>
     </param>
